Fix spacing around the coupon code field

--- a/sass/partials/_checkout-coupon-code.scss
+++ b/sass/partials/_checkout-coupon-code.scss
@@ -12,6 +12,7 @@
 }
 
 .fc-wrapper .fc-expansible-form-section__content--coupon_code input#coupon_code {
+	margin: 0;
 	height: remsize( 5.5rem );
 }
 .fc-wrapper .fc-expansible-form-section__content--coupon_code input#coupon_code:focus {
